[gd_scene load_steps=10 format=3 uid="uid://bcf5hqn04g1dm"]

[ext_resource type="Texture2D" uid="uid://brj8bxltlhfm8" path="res://assets/Animals/Cow/Cow_04.png" id="1_arbll"]
[ext_resource type="Script" path="res://npcs/cow/cow.gd" id="1_vdc75"]
[ext_resource type="Texture2D" uid="uid://chmeya04qtohw" path="res://assets/UI/UI_Icons.png" id="3_rd4l3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_61bpw"]
radius = 4.9996
height = 19.9984

[sub_resource type="Animation" id="Animation_tx1rp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_je1wf"]
resource_name = "eat"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_xrgli"]
resource_name = "walk"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_co27l"]
_data = {
"RESET": SubResource("Animation_tx1rp"),
"eat": SubResource("Animation_je1wf"),
"walk": SubResource("Animation_xrgli")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ijs6g"]
radius = 15.0

[node name="Cow" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(0, -9)
collision_layer = 32
collision_mask = 47
platform_on_leave = 2
platform_floor_layers = 4294967042
script = ExtResource("1_vdc75")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_arbll")
hframes = 8
vframes = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
rotation = 1.58351
shape = SubResource("CapsuleShape2D_61bpw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_co27l")
}

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource("CircleShape2D_ijs6g")
debug_color = Color(0.523818, 0.551456, 0.443536, 0.42)

[node name="ChatIcon" type="Sprite2D" parent="DetectionZone"]
visible = false
position = Vector2(-1, -16)
texture = ExtResource("3_rd4l3")
hframes = 8
vframes = 8
frame = 62

[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
